--- a/index.html
+++ b/index.html
@@ -5,15 +5,41 @@
   <meta charset="utf-8">
 
   <title>AB Cases</title>
-  <!-- <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint"> -->
-
+  <!-- <meta name="description" content="The HTML5 Herald">-->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- <link rel="stylesheet" href="css/styles.css?v=1.0"> -->
-
+  <!-- <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
+  <link href="bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 
+
 <body>
-    hello
-  <!-- <script src="js/scripts.js"></script> -->
+    <div class="container-lg">
+        <div id="stat" class="table-responsive-sm">
+            <table class="table table-borderless">
+                <thead>
+                    <tr>
+                    <th scope="col">Area</th>
+                    <th scope="col">Cases</th>
+                    <!-- <th scope="col">Handle</th> -->
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+        </div>
+        <div class="alert alert-primary" role="alert">
+            <a href="https://www.alberta.ca/coronavirus-info-for-albertans.aspx" target="_blank">Information from alberta.ca </a>
+        </div>
+        
+        <div id="list_cases">
+
+        </div>
+    </div>
+    
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js" integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
