--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
   <title>AB Cases</title>
-  <!-- <meta name="description" content="The HTML5 Herald">-->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <!-- <link rel="stylesheet" href="css/styles.css?v=1.0"> -->
   <!-- <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
   <link href="bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
@@ -20,7 +17,7 @@
             <table class="table table-borderless">
                 <thead>
                     <tr>
-                    <th scope="col">Area</th>
+                    <th scope="col"></th>
                     <th scope="col">Cases</th>
                     <!-- <th scope="col">Handle</th> -->
                     </tr>
