added a map, code temp commented

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 
 <body>
+    <!-- <object id="mapobj" type="image/svg+xml" data="map.svg"></object> -->
     <div class="container-lg">
         <div id="stat" class="table-responsive-sm">
             <table class="table table-borderless">
