--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <body>
     <!-- <object id="mapobj" type="image/svg+xml" data="map.svg"></object> -->
     <div class="container-lg">
-        <div id="stat" class="table-responsive-sm">
-            <table class="table table-borderless">
+        <div class="table-responsive-sm">
+            <table id="tblstat" class="table table-borderless">
                 <thead>
                     <tr>
                     <th scope="col"></th>
