remove legacy code, refactor

--- a/index.html
+++ b/index.html
@@ -22,24 +22,19 @@
             <div class="col-sm">
                 <div class="table-responsive-sm">
                     <table id="tblstat" class="table table-borderless">
-                        <thead>
-                            <tr>
-                                <th scope="col"></th>
-                                <th scope="col">Cases</th>
-                                <th scope="col">Death</th>
-                            </tr>
-                        </thead>
+                        <thead></thead>
                         <tbody></tbody>
                     </table>
                 </div>
             </div>
-            <div id="svgmap" class="col-sm text-sm-left text-center">
-                <!-- <object id="mapobj" type="image/svg+xml" data="map.svg"></object>     -->
-            </div>
+            <div id="svgmap" class="col-sm text-sm-left text-center"></div>
             
         </div>
         <div class="alert alert-primary" role="alert">
             <a href="https://www.alberta.ca/coronavirus-info-for-albertans.aspx" target="_blank">Information from alberta.ca/covid19 </a>
+        </div>
+        <div class="alert alert-primary" role="alert">
+            <a href="https://www.alberta.ca/covid-19-alberta-data.aspx" target="_blank">Stats now at alberta.ca/covid19statistics</a>
         </div>
         
         <div id="list_cases">
