--- a/index.html
+++ b/index.html
@@ -30,6 +30,21 @@
             <div id="svgmap" class="col-sm text-sm-left text-center"></div>
             
         </div>
+        <div class="row">
+            <div class="col-sm-4">
+                <canvas id="chartTotal"></canvas>
+            </div>
+            <div class="col-sm-8">
+                <div class="row">
+                    <div class="col-6">
+                        <canvas id="chartZoneTotal"></canvas>
+                    </div>
+                    <div class="col-6">
+                        <canvas id="chartZoneCount"></canvas>
+                    </div> 
+                </div>
+            </div>
+        </div>
         <div class="alert alert-primary" role="alert">
             <a href="https://www.alberta.ca/coronavirus-info-for-albertans.aspx" target="_blank">Information from alberta.ca/covid19 </a>
         </div>
@@ -45,6 +60,7 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js" integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
   <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
