--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div ></div>
     <div class="container-lg">
         <div class="row">
-            <div class="col-md col-sm-7">
+            <div class="col-md col-sm-7" style="padding:0">
                 <div class="table-responsive-sm">
                     <table id="tblstat" class="table table-borderless">
                         <thead></thead>
@@ -27,7 +27,7 @@
                     </table>
                 </div>
             </div>
-            <div id="svgmap" class="col-md col-sm-5 text-sm-left text-center"></div>
+            <div id="svgmap"  style="padding:0; margin-top: 1.5rem;" class="col-md col-sm-5 text-sm-left text-center"></div>
             
         </div>
         <div class="alert alert-primary" role="alert">
