layout and labels

--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
             
         </div>
         <div class="row">
-            <div class="col-sm-10">
+            <div class="col-sm-7">
                 <canvas id="chartTotal"></canvas>
             </div>
-            <div class="col-sm-12">
+            <div class="col-sm-5">
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-6 col-sm-12">
                         <canvas id="chartZoneTotal"></canvas>
                     </div>
-                    <div class="col-6">
+                    <div class="col-6 col-sm-12">
                         <canvas id="chartZoneCount"></canvas>
                     </div> 
                 </div>
