stacked bar chart

--- a/index.html
+++ b/index.html
@@ -31,18 +31,8 @@
             
         </div>
         <div class="row">
-            <div class="col-sm-7">
+            <div class="col-12" style="height:26rem">
                 <canvas id="chartTotal"></canvas>
-            </div>
-            <div class="col-sm-5">
-                <div class="row">
-                    <div class="col-6 col-sm-12">
-                        <canvas id="chartZoneTotal"></canvas>
-                    </div>
-                    <div class="col-6 col-sm-12">
-                        <canvas id="chartZoneCount"></canvas>
-                    </div> 
-                </div>
             </div>
         </div>
         <div class="alert alert-primary" role="alert">
