update 4/10;added per day chart;adjust y ticks interval

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
             <div class="col-12" style="height:26rem">
                 <canvas id="chartTotal"></canvas>
             </div>
+            <div class="col-12" style="height:26rem">
+                <canvas id="chartPerday"></canvas>
+            </div>
         </div>
         <div class="alert alert-primary" role="alert">
             <a href="https://www.alberta.ca/coronavirus-info-for-albertans.aspx" target="_blank">Information from alberta.ca/covid19 </a>
