--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta http-equiv="Expires" content="0"/>
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <!-- <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
-  <link href="font-awesome.min.css" rel="stylesheet">
-  <link href="bootstrap.min.css" rel="stylesheet">
+  <!-- <link href="font-awesome.min.css" rel="stylesheet"> -->
+  <!-- <link href="bootstrap.min.css" rel="stylesheet"> -->
   <link rel="stylesheet" href="style.css">
 </head>
 
