added loading css

--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
         </div>
         
     </nav>
-    <div ></div>
+    <div id="loading"  style="width:100%; margin: auto; text-align: center;">
+        <div class="lds-ripple" style="margin: 20px auto">
+            <div></div><div></div>
+        </div>
+    </div>
     <div class="container-lg">
         
         <div class="row">
